APIs/googleapis.com/displayvideo/v2/java-client/docs/LineItem.md


# LineItem

A single line item.

## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**advertiserId** | **String** | Output only. The unique ID of the advertiser the line item belongs to. |  [optional] [readonly] |
|**bidStrategy** | [**BiddingStrategy**](BiddingStrategy.md) |  |  [optional] |
|**budget** | [**LineItemBudget**](LineItemBudget.md) |  |  [optional] |
|**campaignId** | **String** | Output only. The unique ID of the campaign that the line item belongs to. |  [optional] [readonly] |
|**conversionCounting** | [**ConversionCountingConfig**](ConversionCountingConfig.md) |  |  [optional] |
|**creativeIds** | **List&lt;String&gt;** | The IDs of the creatives associated with the line item. |  [optional] |
|**displayName** | **String** | Required. The display name of the line item. Must be UTF-8 encoded with a maximum size of 240 bytes. |  [optional] |
|**entityStatus** | [**EntityStatusEnum**](#EntityStatusEnum) | Required. Controls whether or not the line item can spend its budget and bid on inventory. * For CreateLineItem method, only &#x60;ENTITY_STATUS_DRAFT&#x60; is allowed. To activate a line item, use UpdateLineItem method and update the status to &#x60;ENTITY_STATUS_ACTIVE&#x60; after creation. * A line item cannot be changed back to &#x60;ENTITY_STATUS_DRAFT&#x60; status from any other status. * If the line item&#39;s parent insertion order is not active, the line item can&#39;t spend its budget even if its own status is &#x60;ENTITY_STATUS_ACTIVE&#x60;. |  [optional] |
|**excludeNewExchanges** | **Boolean** | Whether to exclude new exchanges from automatically being targeted by the line item. This field is false by default. |  [optional] |
|**flight** | [**LineItemFlight**](LineItemFlight.md) |  |  [optional] |
|**frequencyCap** | [**FrequencyCap**](FrequencyCap.md) |  |  [optional] |
|**insertionOrderId** | **String** | Required. Immutable. The unique ID of the insertion order that the line item belongs to. |  [optional] |
|**integrationDetails** | [**IntegrationDetails**](IntegrationDetails.md) |  |  [optional] |
|**lineItemId** | **String** | Output only. The unique ID of the line item. Assigned by the system. |  [optional] [readonly] |
|**lineItemType** | [**LineItemTypeEnum**](#LineItemTypeEnum) | Required. Immutable. The type of the line item. |  [optional] |
|**mobileApp** | [**MobileApp**](MobileApp.md) |  |  [optional] |
|**name** | **String** | Output only. The resource name of the line item. |  [optional] [readonly] |
|**pacing** | [**Pacing**](Pacing.md) |  |  [optional] |
|**partnerCosts** | [**List&lt;PartnerCost&gt;**](PartnerCost.md) | The partner costs associated with the line item. If absent or empty in CreateLineItem method, the newly created line item will inherit partner costs from its parent insertion order. |  [optional] |
|**partnerRevenueModel** | [**PartnerRevenueModel**](PartnerRevenueModel.md) |  |  [optional] |
|**reservationType** | [**ReservationTypeEnum**](#ReservationTypeEnum) | Output only. The reservation type of the line item. |  [optional] [readonly] |
|**targetingExpansion** | [**TargetingExpansionConfig**](TargetingExpansionConfig.md) |  |  [optional] |
|**updateTime** | **String** | Output only. The timestamp when the line item was last updated. Assigned by the system. |  [optional] [readonly] |
|**warningMessages** | [**List&lt;WarningMessagesEnum&gt;**](#List&lt;WarningMessagesEnum&gt;) | Output only. The warning messages generated by the line item. These warnings do not block saving the line item, but some may block the line item from running. |  [optional] [readonly] |
|**youtubeAndPartnersSettings** | [**YoutubeAndPartnersSettings**](YoutubeAndPartnersSettings.md) |  |  [optional] |



## Enum: EntityStatusEnum

| Name | Value |
|---- | -----|
| UNSPECIFIED | &quot;ENTITY_STATUS_UNSPECIFIED&quot; |
| ACTIVE | &quot;ENTITY_STATUS_ACTIVE&quot; |
| ARCHIVED | &quot;ENTITY_STATUS_ARCHIVED&quot; |
| DRAFT | &quot;ENTITY_STATUS_DRAFT&quot; |
| PAUSED | &quot;ENTITY_STATUS_PAUSED&quot; |
| SCHEDULED_FOR_DELETION | &quot;ENTITY_STATUS_SCHEDULED_FOR_DELETION&quot; |



## Enum: LineItemTypeEnum

| Name | Value |
|---- | -----|
| UNSPECIFIED | &quot;LINE_ITEM_TYPE_UNSPECIFIED&quot; |
| DISPLAY_DEFAULT | &quot;LINE_ITEM_TYPE_DISPLAY_DEFAULT&quot; |
| DISPLAY_MOBILE_APP_INSTALL | &quot;LINE_ITEM_TYPE_DISPLAY_MOBILE_APP_INSTALL&quot; |
| VIDEO_DEFAULT | &quot;LINE_ITEM_TYPE_VIDEO_DEFAULT&quot; |
| VIDEO_MOBILE_APP_INSTALL | &quot;LINE_ITEM_TYPE_VIDEO_MOBILE_APP_INSTALL&quot; |
| DISPLAY_MOBILE_APP_INVENTORY | &quot;LINE_ITEM_TYPE_DISPLAY_MOBILE_APP_INVENTORY&quot; |
| VIDEO_MOBILE_APP_INVENTORY | &quot;LINE_ITEM_TYPE_VIDEO_MOBILE_APP_INVENTORY&quot; |
| AUDIO_DEFAULT | &quot;LINE_ITEM_TYPE_AUDIO_DEFAULT&quot; |
| VIDEO_OVER_THE_TOP | &quot;LINE_ITEM_TYPE_VIDEO_OVER_THE_TOP&quot; |
| YOUTUBE_AND_PARTNERS_ACTION | &quot;LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_ACTION&quot; |
| YOUTUBE_AND_PARTNERS_NON_SKIPPABLE | &quot;LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_NON_SKIPPABLE&quot; |
| YOUTUBE_AND_PARTNERS_VIDEO_SEQUENCE | &quot;LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_VIDEO_SEQUENCE&quot; |
| YOUTUBE_AND_PARTNERS_AUDIO | &quot;LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_AUDIO&quot; |
| YOUTUBE_AND_PARTNERS_REACH | &quot;LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_REACH&quot; |
| YOUTUBE_AND_PARTNERS_SIMPLE | &quot;LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_SIMPLE&quot; |
| YOUTUBE_AND_PARTNERS_NON_SKIPPABLE_OVER_THE_TOP | &quot;LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_NON_SKIPPABLE_OVER_THE_TOP&quot; |
| YOUTUBE_AND_PARTNERS_REACH_OVER_THE_TOP | &quot;LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_REACH_OVER_THE_TOP&quot; |
| YOUTUBE_AND_PARTNERS_SIMPLE_OVER_THE_TOP | &quot;LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_SIMPLE_OVER_THE_TOP&quot; |
| YOUTUBE_AND_PARTNERS_TARGET_FREQUENCY | &quot;LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_TARGET_FREQUENCY&quot; |
| YOUTUBE_AND_PARTNERS_VIEW | &quot;LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_VIEW&quot; |
| DISPLAY_OUT_OF_HOME | &quot;LINE_ITEM_TYPE_DISPLAY_OUT_OF_HOME&quot; |
| VIDEO_OUT_OF_HOME | &quot;LINE_ITEM_TYPE_VIDEO_OUT_OF_HOME&quot; |



## Enum: ReservationTypeEnum

| Name | Value |
|---- | -----|
| UNSPECIFIED | &quot;RESERVATION_TYPE_UNSPECIFIED&quot; |
| NOT_GUARANTEED | &quot;RESERVATION_TYPE_NOT_GUARANTEED&quot; |
| PROGRAMMATIC_GUARANTEED | &quot;RESERVATION_TYPE_PROGRAMMATIC_GUARANTEED&quot; |
| TAG_GUARANTEED | &quot;RESERVATION_TYPE_TAG_GUARANTEED&quot; |
| PETRA_VIRAL | &quot;RESERVATION_TYPE_PETRA_VIRAL&quot; |
| INSTANT_RESERVE | &quot;RESERVATION_TYPE_INSTANT_RESERVE&quot; |



## Enum: List&lt;WarningMessagesEnum&gt;

| Name | Value |
|---- | -----|
| LINE_ITEM_WARNING_MESSAGE_UNSPECIFIED | &quot;LINE_ITEM_WARNING_MESSAGE_UNSPECIFIED&quot; |
| INVALID_FLIGHT_DATES | &quot;INVALID_FLIGHT_DATES&quot; |
| EXPIRED | &quot;EXPIRED&quot; |
| PENDING_FLIGHT | &quot;PENDING_FLIGHT&quot; |
| ALL_PARTNER_ENABLED_EXCHANGES_NEGATIVELY_TARGETED | &quot;ALL_PARTNER_ENABLED_EXCHANGES_NEGATIVELY_TARGETED&quot; |
| INVALID_INVENTORY_SOURCE | &quot;INVALID_INVENTORY_SOURCE&quot; |
| APP_INVENTORY_INVALID_SITE_TARGETING | &quot;APP_INVENTORY_INVALID_SITE_TARGETING&quot; |
| APP_INVENTORY_INVALID_AUDIENCE_LISTS | &quot;APP_INVENTORY_INVALID_AUDIENCE_LISTS&quot; |
| NO_VALID_CREATIVE | &quot;NO_VALID_CREATIVE&quot; |
| PARENT_INSERTION_ORDER_PAUSED | &quot;PARENT_INSERTION_ORDER_PAUSED&quot; |
| PARENT_INSERTION_ORDER_EXPIRED | &quot;PARENT_INSERTION_ORDER_EXPIRED&quot; |
| DEPRECATED_FIRST_PARTY_AUDIENCE_EXCLUSION | &quot;DEPRECATED_FIRST_PARTY_AUDIENCE_EXCLUSION&quot; |



